レコード構文 practice

--- a/learning/learning.cabal
+++ b/learning/learning.cabal
@@ -40,6 +40,7 @@ executable learning-exe
       Color
       Fact
       Shape
+      ShapeRecord
       Paths_learning
   hs-source-dirs:
       app
