--- a/learning/learning.cabal
+++ b/learning/learning.cabal
@@ -32,11 +32,13 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , random
   default-language: Haskell2010
 
 executable learning-exe
   main-is: Main.hs
   other-modules:
+      Action
       Color
       Fact
       Shape
@@ -48,6 +50,7 @@ executable learning-exe
   build-depends:
       base >=4.7 && <5
     , learning
+    , random
   default-language: Haskell2010
 
 test-suite learning-test
@@ -61,4 +64,5 @@ test-suite learning-test
   build-depends:
       base >=4.7 && <5
     , learning
+    , random
   default-language: Haskell2010
